Install gometalinter on CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,10 @@ jobs:
 
       - run:
           name: Lint
-          command: gometalinter ./...
+          command: |
+            go get -u github.com/alecthomas/gometalinter
+            gometalinter --install
+            gometalinter ./...
 
       - run:
           name: Build
