--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,3 +48,5 @@ jobs:
             ./muffet -v https://coel-lang.org 2>&1 | sort > foo.txt
             ./muffet -v https://coel-lang.org 2>&1 | sort > bar.txt
             diff foo.txt bar.txt
+
+            ! ./muffet https://raviqqe.com 2>&1 | grep .
