Push docker image only when version is changed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,16 +47,18 @@ jobs:
       - run:
           name: Docker Image
           command: |
-            if [ $CIRCLE_BRANCH = master ]
-            then
-              curl -L https://download.docker.com/linux/static/stable/x86_64/docker-17.12.1-ce.tgz |
-              tar -xz -C /tmp
-              mv /tmp/docker/* /usr/bin
+            curl -L https://download.docker.com/linux/static/stable/x86_64/docker-17.12.1-ce.tgz |
+            tar -xz -C /tmp
+            mv /tmp/docker/* /usr/bin
 
+            version=$(./muffet --version)
+            old_version=$(docker run raviqqe/muffet --version)
+
+            if [ $CIRCLE_BRANCH = master -a $version != $old_version ]
+            then
               docker build -t $DOCKER_USER/muffet .
               docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
               docker push $DOCKER_USER/muffet
-              version=$(./muffet --version)
               docker tag $DOCKER_USER/muffet $DOCKER_USER/muffet:$version
               docker push $DOCKER_USER/muffet:$version
             fi
