Use golangci-lint

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,8 @@ jobs:
   build:
     docker:
       - image: golang
+    environment:
+      GO111MODULE: 'on'
     working_directory: /go/src/github.com/raviqqe/muffet
     steps:
       - checkout
