--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,15 +4,21 @@ workflows:
   all:
     jobs:
       - build
+      - release:
+          requires:
+            - build
       - docker:
           requires:
             - build
+          filters:
+            branches:
+              only: master
 jobs:
   build:
     docker:
       - image: golang
     environment:
-      GO111MODULE: 'on'
+      GO111MODULE: "on"
     working_directory: /go/src/github.com/raviqqe/muffet
     steps:
       - checkout
@@ -29,11 +35,30 @@ jobs:
           rake serve
           sleep 1
           rake integration_test
-      - run: ./muffet --version > version
       - persist_to_workspace:
           root: .
           paths:
-            - version
+            - muffet
+  release:
+    docker:
+      - image: golang
+    environment:
+      GO111MODULE: "on"
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - run: |
+          version=$(./muffet --version)
+
+          if git tag -l | grep $version
+          then
+            exit 0
+          fi
+
+          git tag $version
+          git push --tags
+          curl -sL https://git.io/goreleaser | bash
   docker:
     docker:
       - image: docker:17
@@ -44,13 +69,15 @@ jobs:
           at: .
       - run: |
           name=$DOCKER_USER/muffet
-          version=$(cat version)
+          version=$(./muffet --version)
 
-          if [ $CIRCLE_BRANCH = master -a $version != $(docker run $name --version) ]
+          if [ $version == $(docker run $name --version) ]
           then
-            docker build -t $name .
-            docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-            docker push $name
-            docker tag $name $name:$version
-            docker push $name:$version
+            exit 0
           fi
+
+          docker build -t $name .
+          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+          docker push $name
+          docker tag $name $name:$version
+          docker push $name:$version
