--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,9 @@ workflows:
       - release:
           requires:
             - build
+          filters:
+            branches:
+              only: master
       - docker:
           requires:
             - build
