--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,19 +26,11 @@ jobs:
     working_directory: /go/src/github.com/raviqqe/muffet
     steps:
       - checkout
-      - run: |
-          apt -y update --fix-missing
-          apt -y upgrade
-          apt -y install rake
-      - run: rake deps
-      - run: rake lint
-      - run: rake build
-      - run: rake unit_test
-      - run: curl -s https://codecov.io/bash | bash
-      - run: |
-          rake serve
-          sleep 1
-          rake integration_test
+      - run: tools/dependencies.sh
+      - run: tools/lint.sh
+      - run: tools/build.sh
+      - run: tools/unit_test.sh
+      - run: tools/integration_test.sh
       - persist_to_workspace:
           root: .
           paths:
