--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,7 @@ jobs:
       - run: tools/dependencies.sh
       - run: tools/build.sh
       - run: tools/lint.sh
-      - run: tools/unit_test.sh
-      - run: tools/integration_test.sh
+      - run: tools/test.sh
       - persist_to_workspace:
           root: .
           paths:
