--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -9,10 +9,8 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - uses: elgohr/Publish-Docker-Github-Action@master
+      - uses: actions/checkout@v2
         with:
-          name: raviqqe/muffet
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          tag_semver: true
+          fetch-depth: 0
+      - run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      - run: tools/docker.sh
