--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,5 +11,5 @@ jobs:
       - uses: actions/checkout@v2
       - run: go build
       - uses: golangci/golangci-lint-action@v2
-      - run: go test -covermode atomic -coverprofile coverage.txt
+      - run: go test -race -covermode atomic -coverprofile coverage.txt
       - uses: codecov/codecov-action@v1
