--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,3 +25,5 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: lycheeverse/lychee-action@v1
+        with:
+          fail: true
