--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,6 +24,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: lycheeverse/lychee-action@v1
-        with:
-          fail: true
+      - uses: raviqqe/markdown-link-check@main
