--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,10 +1,19 @@
 builds:
   - env:
       - CGO_ENABLED=0
+    goarch:
+      - 386
+      - amd64
+      - arm
+      - arm64
     goos:
+      - darwin
+      - freebsd
       - linux
       - windows
-      - darwin
+    goarm:
+      - 6
+      - 7
 archives:
   - format: tar.gz
     # this name template makes the OS and Arch compatible with the results of uname.
