--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -14,5 +14,11 @@ builds:
     goarm:
       - 6
       - 7
+archives:
+  - format: tar.gz
+    name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
+    format_overrides:
+      - goos: windows
+        format: zip
 changelog:
   sort: asc
