--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
       - run: go build
       - uses: golangci/golangci-lint-action@v4
       - run: go test -race -covermode atomic -coverprofile coverage.txt
