--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - id: version
+        run: echo version=$(go run . --version) >> ${{ github.output }}
       - uses: raviqqe/goreleaser-action@v1
         with:
           version: ${{ steps.version.outputs.version }}
