--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -16,10 +16,12 @@ builds:
       - 6
       - 7
 archives:
-  - format: tar.gz
+  - formats:
+      - tar.gz
     name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
     format_overrides:
       - goos: windows
-        format: zip
+        formats:
+          - zip
 changelog:
   sort: asc
