--- a/.github/workflows/document.yaml
+++ b/.github/workflows/document.yaml
@@ -48,9 +48,9 @@ jobs:
       - uses: actions/checkout@v4
       - run: npm ci
         working-directory: doc
-      - run: npm run build
+      - run: npm run build -- --site http://localhost:4321
         working-directory: doc
-      - run: npm start -- --site http://localhost:4321 &
+      - run: npm preview &
         working-directory: doc
       - run: go run . --buffer-size 8192 http://localhost:4321/muffet/
   document:
