--- a/.github/workflows/document.yaml
+++ b/.github/workflows/document.yaml
@@ -50,7 +50,7 @@ jobs:
         working-directory: doc
       - run: npm run build -- --site http://localhost:4321
         working-directory: doc
-      - run: npm preview &
+      - run: npm run preview &
         working-directory: doc
       - run: go run . --buffer-size 8192 http://localhost:4321/muffet/
   document:
