--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,7 +19,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
-      - run:
+      - run: docker build -t muffet .
+      - run: docker run muffet --verbose --buffer-size 8192 https://raviqqe.github.io/muffet
   spell_check:
     runs-on: ubuntu-latest
     steps:
