--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,14 +22,14 @@ jobs:
   docker_release:
     needs: release
     runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/main' }}
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - uses: docker/setup-buildx-action@v3
       - run: echo ${{ secrets.DOCKER_ACCESS_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-      - run: tools/docker.sh
+        if: ${{ github.ref == 'refs/heads/main' }}
+      - run: tools/docker.sh ${{ github.ref == 'refs/heads/main' && '--push' || '' }}
   release:
     needs:
       - go_release
