--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,7 +20,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   docker_release:
-    needs: release
+    needs: go_release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
