--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,7 +5,7 @@ on:
       - main
   pull_request:
 jobs:
-  test:
+  go_test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -13,6 +13,13 @@ jobs:
       - uses: golangci/golangci-lint-action@v7
       - run: go test -race -covermode atomic -coverprofile coverage.txt
       - uses: codecov/codecov-action@v5
+  docker_test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+      - run: docker build -t muffet .
+      - run: docker run muffet --verbose --buffer-size 8192 https://raviqqe.github.io/muffet
   spell_check:
     runs-on: ubuntu-latest
     steps:
@@ -25,3 +32,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: raviqqe/markdown-link-check@main
+  test:
+    needs:
+      - go_test
+      - docker_test
+      - spell_check
+      - readme
+    if: always()
+    runs-on: ubuntu-latest
+    steps:
+      - run: for result in ${{ join(needs.*.result, ' ') }}; do [ $result = success ]; done
