--- a/doc/public/manifest.json
+++ b/doc/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "Muffet",
   "name": "Muffet, the fast link checker",
-  "icons": [{ "src": "/muffet/icon.svg", "sizes": "any" }],
+  "icons": [{ "src": "icon.svg", "sizes": "any" }],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "rebeccapurple",
