--- a/doc/package.json
+++ b/doc/package.json
@@ -2,6 +2,9 @@
   "name": "doc",
   "type": "module",
   "version": "0.1.0",
+  "engines": {
+    "node": "^24.8.0"
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
