--- a/doc/package.json
+++ b/doc/package.json
@@ -2,6 +2,9 @@
   "name": "doc",
   "type": "module",
   "version": "0.1.0",
+  "engines": {
+    "node": "^24.8.0"
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -20,6 +23,8 @@
     "@biomejs/biome": "^2.2.4",
     "@raviqqe/biome-config": "^2.0.18",
     "@types/node": "^24.5.1",
+    "sharp": "^0.34.4",
     "typescript": "^5.9.2"
-  }
+  },
+  "packageManager": "pnpm@10.17.0+sha512.fce8a3dd29a4ed2ec566fb53efbb04d8c44a0f05bc6f24a73046910fb9c3ce7afa35a0980500668fa3573345bd644644fa98338fa168235c80f4aa17aa17fbef"
 }
