--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,7 +29,21 @@ jobs:
       - uses: docker/setup-buildx-action@v3
       - run: echo ${{ secrets.DOCKER_ACCESS_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
         if: ${{ github.ref == 'refs/heads/main' }}
-      - run: tools/docker.sh ${{ github.ref == 'refs/heads/main' && '--push' || '' }}
+      - uses: docker/build-push-action@v6
+        with:
+          platforms: linux/386,linux/amd64,linux/arm,linux/arm64
+          push: ${{ github.ref == 'refs/heads/main' }}
+          tags: |
+            ${{ steps.metadata.outputs.repository }}:latest
+            ${{ steps.metadata.outputs.version && format('{0}:{1}', steps.metadata.outputs.repository, steps.metadata.outputs.version) || '' }}
+      # spell-checker: disable-next-line
+      - uses: peter-evans/dockerhub-description@1b9a80c056b620d92cedb9d9b5a223409c68ddfa # v5.0.0
+        with:
+          username: ${{ vars.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+          repository: ${{ steps.metadata.outputs.repository }}
+          short-description: The miniature, embeddable R7RS Scheme implementation
+        if: github.ref == 'refs/heads/main'
   release:
     needs:
       - go_release
