Refactor Docker pipeline

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,23 +26,25 @@ jobs:
       - uses: actions/checkout@v6
         with:
           fetch-depth: 0
+      - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
-      - run: echo ${{ secrets.DOCKER_ACCESS_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      - uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_TOKEN }}
         if: ${{ github.ref == 'refs/heads/main' }}
       - uses: docker/build-push-action@v6
         with:
           platforms: linux/386,linux/amd64,linux/arm,linux/arm64
           push: ${{ github.ref == 'refs/heads/main' }}
-          tags: |
-            ${{ steps.metadata.outputs.repository }}:latest
-            ${{ steps.metadata.outputs.version && format('{0}:{1}', steps.metadata.outputs.repository, steps.metadata.outputs.version) || '' }}
+          tags: ${{ steps.metadata.outputs.tags }}
       # spell-checker: disable-next-line
       - uses: peter-evans/dockerhub-description@1b9a80c056b620d92cedb9d9b5a223409c68ddfa # v5.0.0
         with:
-          username: ${{ vars.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+          username: ${{ vars.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_TOKEN }}
           repository: ${{ steps.metadata.outputs.repository }}
-          short-description: The miniature, embeddable R7RS Scheme implementation
+          short-description: Fast website link checker in Go
         if: github.ref == 'refs/heads/main'
   release:
     needs:
