--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,14 +35,18 @@ jobs:
           password: ${{ secrets.DOCKER_TOKEN }}
         if: ${{ github.ref == 'refs/heads/main' }}
       - id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: raviqqe/muffet
+        run: |
+          (
+            echo repository=${{ vars.DOCKER_USER || 'test' }}/${{ matrix.image.binary }}
+            echo version=$(git tag --points-at | sed s/^v//)
+          ) >> ${{ github.output }}
       - uses: docker/build-push-action@v6
         with:
           platforms: linux/386,linux/amd64,linux/arm,linux/arm64
           push: ${{ github.ref == 'refs/heads/main' }}
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: |
+            ${{ steps.meta.outputs.repository }}:latest
+            ${{ steps.meta.outputs.version && format('{0}:{1}', steps.meta.outputs.repository, steps.meta.outputs.version) || '' }}
       # spell-checker: disable-next-line
       - uses: peter-evans/dockerhub-description@1b9a80c056b620d92cedb9d9b5a223409c68ddfa # v5.0.0
         with:
