--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,14 +22,39 @@ jobs:
   docker_release:
     needs: go_release
     runs-on: ubuntu-latest
+    environment: ${{ github.ref == 'refs/heads/main' && 'release' || '' }}
     steps:
       - uses: actions/checkout@v6
         with:
           fetch-depth: 0
+      - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
-      - run: echo ${{ secrets.DOCKER_ACCESS_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      - uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_TOKEN }}
         if: ${{ github.ref == 'refs/heads/main' }}
-      - run: tools/docker.sh ${{ github.ref == 'refs/heads/main' && '--push' || '' }}
+      - id: meta
+        run: |
+          (
+            echo repository=${{ vars.DOCKER_USER || 'test' }}/muffet
+            echo version=$(git tag --points-at | sed s/^v//)
+          ) >> ${{ github.output }}
+      - uses: docker/build-push-action@v6
+        with:
+          platforms: linux/386,linux/amd64,linux/arm,linux/arm64
+          push: ${{ github.ref == 'refs/heads/main' }}
+          tags: |
+            ${{ steps.meta.outputs.repository }}:latest
+            ${{ steps.meta.outputs.version && format('{0}:{1}', steps.meta.outputs.repository, steps.meta.outputs.version) || '' }}
+      # spell-checker: disable-next-line
+      - uses: peter-evans/dockerhub-description@1b9a80c056b620d92cedb9d9b5a223409c68ddfa # v5.0.0
+        with:
+          username: ${{ vars.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+          repository: ${{ steps.meta.outputs.repository }}
+          short-description: Fast website link checker in Go
+        if: github.ref == 'refs/heads/main'
   release:
     needs:
       - go_release
