--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,13 +31,13 @@ jobs:
       - uses: docker/setup-buildx-action@v3
       - uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKER_USER }}
+          username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_TOKEN }}
-        if: ${{ github.ref == 'refs/heads/main' }}
+        if: github.ref == 'refs/heads/main'
       - id: meta
         run: |
           (
-            echo repository=${{ vars.DOCKER_USER || 'test' }}/muffet
+            echo repository=${{ secrets.DOCKER_USER || 'test' }}/muffet
             echo version=$(git tag --points-at | sed s/^v//)
           ) >> ${{ github.output }}
       - uses: docker/build-push-action@v6
@@ -50,7 +50,7 @@ jobs:
       # spell-checker: disable-next-line
       - uses: peter-evans/dockerhub-description@1b9a80c056b620d92cedb9d9b5a223409c68ddfa # v5.0.0
         with:
-          username: ${{ vars.DOCKER_USER }}
+          username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_TOKEN }}
           repository: ${{ steps.meta.outputs.repository }}
           short-description: Fast website link checker in Go
